--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,9 @@
         }
     },
     "extra": {
+        "branch-alias": {
+            "dev-master": "1.x-dev"
+        },
         "expose": [
             "client/dist"
         ]
