--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "dependencies": {
     "babel-polyfill": "6.7.4",
-    "dropzone": "^5.5.1",
+    "dropzone": "5.5.1",
     "jquery": "^3.5.0",
     "mime": "^1.4.1",
     "react": "15.3.1"
