--- a/package.json
+++ b/package.json
@@ -18,11 +18,7 @@
     "lint-sass": "sass-lint client/src"
   },
   "dependencies": {
-    "babel-polyfill": "6.7.4",
-    "dropzone": "5.5.1",
-    "jquery": "^3.5.0",
-    "mime": "^1.4.1",
-    "react": "15.3.1"
+    "dropzone": "^5.9.3"
   },
   "devDependencies": {
     "@silverstripe/eslint-config": "^0.0.4",
